--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "vBadger",
-  "private": true,
+  "private": false,
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --host",
     "test:e2e": "cypress run",
     "test:unit": "vitest",
-    "lint": "eslint"
+    "lint": "eslint",
+    "assets": "pwa-assets-generator",
+    "android": "~/Library/Android/sdk/emulator/emulator -avd Pixel_6_API_34",
+    "https": "npx servor dist ./index.html --secure",
+    "deploy": "firebase deploy --only hosting"
   },
   "dependencies": {
     "@capacitor/app": "5.0.6",
@@ -19,12 +23,14 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
+    "@vueuse/core": "^10.2.1",
     "ionicons": "^7.0.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@capacitor/cli": "5.2.2",
+    "@vite-pwa/assets-generator": "^0.0.4",
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
@@ -35,6 +41,7 @@
     "jsdom": "^22.1.0",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
+    "vite-plugin-pwa": "^0.16.4",
     "vitest": "^0.32.2",
     "vue-tsc": "^1.0.24"
   },
