--- a/package.json
+++ b/package.json
@@ -44,11 +44,7 @@
     "vite": "^4.3.9",
     "vite-plugin-pwa": "^0.16.4",
     "vitest": "^0.32.2",
-    "vue-tsc": "^1.0.24",
-    "workbox-build": "^7.0.0",
-    "workbox-core": "^7.0.0",
-    "workbox-routing": "^7.0.0",
-    "workbox-strategies": "^7.0.0"
+    "vue-tsc": "^1.0.24"
   },
   "description": "An Ionic project"
 }
